--- a/sample_exe.Rmd
+++ b/sample_exe.Rmd
@@ -46,7 +46,7 @@ library(malia)
 # 3. See Data and set up of estimation
 ## 3.1 Data handling 
 Create data for malia package
-Reading 'raw' data (at first time)
+Reading 'raw' data (at first time)  
 Sighting data
 ```{r}
 #Designate data name
@@ -151,8 +151,8 @@ Summary of densities by area
  #write.xlsx(area.table,file=paste(table.pass,"area.D.table.xlsx",sep=""),row.names=F)
 ```
 
-#5. Ar and Nt products
-##5.1. Classify each debris into categories
+# 5. Ar and Nt products
+## 5.1 Classify each debris into categories
 ls. function can sum up artificial and natural products
 ```{r}
  Ar<-c("FGN","FGF","FGO","EPS","PBA","PBO","FP","PC","G","M","W","UO")
@@ -177,7 +177,7 @@ Natural.leg<-An.table %>%  select(Leg.No.,Leg.Length,Lat.Start,Lon.Start,Lat.End
  grid.D.plot(Natural.grid,save = F)
 ```
 
-## 5.2. Combining results
+## 5.2 Combining results
 Combining results across multiple surveys. In this procedure, it is necessary result objects has to already be created.
 Survey legs
 ```{r}
